Fixed top image in mobile
Top images would expand to cover the order now button.

--- a/assets/style.css
+++ b/assets/style.css
@@ -478,7 +478,7 @@ li {
   .imgBx.active {
     top: var(--header-height);
     left: 0;
-    height: 100%;
+    height: calc(100% - var(--header-height));
   }
 
   .special-container {
